navbar complete with responsive

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,8 @@
 @import "tailwindcss";
 
 @theme {
-    --color-text-color: #4f46e5;
+    --color-normal: #eef9fe;
+    --color-primary: #48B1DB;
+    --color-heading: #FFFFFF;
+    
 }
