seller portal setting, order, product

--- a/app/styles/slider.css
+++ b/app/styles/slider.css
@@ -11,16 +11,17 @@
     /* background: rgba(255, 255, 255, 0.7); */
     padding: 5px;
     border-radius: 50%;
+    z-index: 0;
 }
 
 .swiper-button-prev-custom {
     left: -50px;
-    background-color: #eef9fe;
+    background-color: #48B1DB;
 }
 
 .swiper-button-next-custom {
     right: -50px;
-    background-color: #eef9fe;
+    background-color: #48B1DB;
 }
 /* .mySwiper {
     padding: 0px 0px;
@@ -28,14 +29,10 @@
 
 @media screen and (min-width: 1024px) {
   .sliderResponsive {
-    background-image: url("../../public/upcominngAuction.jpg");
     height: 555px;
     width: 100%;
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
   }
-  .mySwiper {
-    padding: 20px 25px;
-}
 }
